--- a/attendance.html
+++ b/attendance.html
@@ -20,7 +20,7 @@ h1, h2 {
 }
 
 div.chart {
-    height: 700px;
+    height: 800px;
     width: 1200px;
     margin-left: 20px;
     margin-right: auto;
@@ -34,7 +34,8 @@ div.legend {
     width: 400px;
     height: 50;
     padding: 8px;
-    font: 14px sans-serif;
+    font: 12px sans-serif;
+    line-height: 80%;
     background: #ddd;
     opacity: 0.85;
 }
@@ -129,7 +130,7 @@ function linefunc(data)
             .call(xAxis);
         svg.append("svg:g")
             .attr("class", "yaxis")
-            .attr("transform", "translate(30,0)")
+            .attr("transform", "translate(40,0)")
             .call(yAxis);
         scales_drawn = 1;
     }
